# repo-find-orphans

./: .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  announce-0.1.0.md  poetry.toml  pyproject.toml  pytest.ini  ruff-test.toml  ruff.toml
src/repo_find_orphans/: cli.py  manifest.py  parse.py  remote.py  scan.py  selections.py
src/repo_find_orphans/types/: project.py  remote.py
tests/: conftest.py  test_githost.py  test_read_repo.py
tests/fixtures/repo/: repo.xml  selections.yaml
